<resources>
    <string name="app_name">Annelise 340 Project</string>
    <string name="name_date">Blanchard, Annelise 4/19/2022</string>
    <string name="your_name">What is your name?</string>
    <string name="email">What is your email?</string>
    <string name="username">Please create a username</string>
    <string name="birthday">Select Birthdate</string>
    <string name="button">Submit</string>
    <string name="registered">Thanks for Signing up %1$s!</string>
    <string name="back_button">Go Back</string>
    <string name="invalidInfoError">Please enter valid information</string>
    <string name="emailError">Please enter valid email address</string>
    <string name="ageError">Must be 18 years or older to create account!</string>
    <string name="date">%1$d/%2$d/%3$d</string>
</resources>